--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
+       
+       <repository>
+           <id>shadowvolt-repo</id>
+           <url>http://ci.shadowvolt.com/plugin/repository/everything/</url>
+       </repository>
    </repositories>
    
    <dependencies>
@@ -39,10 +44,17 @@
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
-      <dependency>
-         <groupId>DisguiseCraft</groupId>
-         <artifactId>disguise_craft</artifactId>
-         <version>5.1</version>
-      </dependency>
+       
+       <dependency>
+           <groupId>DisguiseCraft</groupId>
+           <artifactId>disguise_craft</artifactId>
+           <version>5.1</version>
+       </dependency>
+      
+       <dependency>
+          <groupId>com.comphenix.protocol</groupId>
+          <artifactId>ProtocolLib</artifactId>
+          <version>3.6.3-SNAPSHOT</version>
+       </dependency>
    </dependencies>
 </project>
